--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Laumga</title>
+    <title>MembApp | Laumga</title>
     <meta name="description" content="Unlocking Opportunities, Embracing Diversity: Muslim Graduates Thrive">
   </head>
   <body>
